--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    <!--------------------------------------------------------------------------------->   
    <!------   This is to fit in the rotation and cerdits  ---------------------------->   
      <table> 
-       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Great American Eclipse 2024"></a><br>
+       <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" onmouseover="this.src='images/frank/frank_23.jpg';" ALT="Great American Eclipse 2024"></a><br>
 	   Solar Eclipse, 08-04-2024 in Hot Springs AK
 	 <!--<IMG SRC="images/frank.jpg" ALT="Grand Canyon March 2023"></a><br>  Photo Credit: Taylor Brysiewicz-->  
  <!--   </td><td>&nbsp;</td>
@@ -101,15 +101,15 @@
   <TR valign=top>
     <td colspan=2><b>News:</b>
 
-      I am teaching a distance course the Winter/Spring 2024 term and will divide my time between College Station, the Newton Institute in
-      Cambridge and the Simons-Laufer Mathematics Institute in Berkeley.<br>
+      In Fall 2024, I will be the Director of Honors and Undergraduate Research for the Department of Mathematics.<br>
       
       Samuel Sottile, my son and current (2023&ndash;4, in Mathematics)
       <a href="https://drive.google.com/file/d/1BPIvKT-nIQTXcYLDqkCyt-VEanbyGXE6/view">Churchill Scholar</a>,
-      was just awarded a National Science Foundation Graduate Fellowship that he will use at Stanford next year.<br>
+      was awarded a National Science Foundation Graduate Fellowship that he will use at Stanford next year.
+      He also achieved distinction on the Part III of the Mathematical Tripos.<br>
    
-      (We both graduated from Michigan State University, held Churchill Scholarships, and NSFGR Fellowships; he pips me on
-      being a Goldwater Scholar.)
+      (We both graduated from Michigan State University, held Churchill Scholarships, received Distinction on Part III, held
+      and NSFGR Fellowships; he pips me on being a Goldwater Scholar.)
       <br> 
 
       </td>
@@ -153,26 +153,9 @@
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Spring  2024</font></b>
-   <table>
-    <!---------------------------------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 629</font></td>
-      <td><a href="teaching/24.1/629.html">History of Mathematics</a> &nbsp; </td>
-      <td align=leftt>This is a distance course.</td>
-     </tr>
-  </table>
-  <!---------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
-  <hr>
-  <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
    <table>
-    <!---------------------------------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 300</font></td>
-      <td><a href="teaching/24.2/300.html"></a>Foundations of Mathematics</td>
-      <td align=left>.</td>
-    </tr>
-    <!---------------------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------------------->
     <tr><td><font color=brown>MATH 666</font></td>
       <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a>.</td>
@@ -392,7 +375,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Apr 14 20:34:16 PDT 2024 by sottile</p>  
+<p>Last modified: Tue Jul 02 17:24:26 CEST 2024 by sottile</p>  
  </body>
 </html> 
 
