--- a/talks.html
+++ b/talks.html
@@ -116,7 +116,15 @@
  <!------------------------------------------------------------------------>
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
-   
+
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
+    AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
+    San Antonio, TX, 14&ndash;15 September 2024.
+    <a href="talks/21/Discriminant.txt">abstract</a>
+   </li>
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
@@ -658,7 +666,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Jun 19 17:04:26 CDT 2024 by sottile</p>  
+<p>Last modified: Thu Jun 20 12:36:00 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
