--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       was awarded a National Science Foundation Graduate Fellowship that he will use at Stanford next year.
       He also achieved distinction on the Part III of the Mathematical Tripos.<br>
    
-      (We both graduated from Michigan State University, held Churchill Scholarships, received Distinction on Part III, held
-      and NSFGR Fellowships; he pips me on being a Goldwater Scholar.)
+      (We both graduated from Michigan State University, held Churchill Scholarships, received Distinction on Part III, and held
+      NSFGR Fellowships; he pips me on being a Goldwater Scholar.)
       <br> 
 
       </td>
@@ -280,7 +280,7 @@
   <td>
 
    <!---------------------------------------------------------------------------->
-   <TABLE width=400>
+   <TABLE width=410>
    <!---------------------------------------------------------------------------->
    <tr>
     <TD colspan=2>
@@ -305,7 +305,7 @@
    <!-----  These are all 150 points high     ------->
    <tr>
      <TD colspan=2>
-       <A HREF="research/stories/index.html"><IMG SRC="images/stories.gif" BORDER=2
+       <A HREF="research/stories/index.html"><IMG SRC="images/stories.gif" BORDER=2 height=150pt
         ALT="Mathematical Short Stories" ></A> 
        <A HREF="research/pages/index.html"><IMG SRC="images/pages.gif" 
          BORDER=2 ALT="Mathematical web pages"></A> 
@@ -375,7 +375,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Jul 02 17:24:26 CEST 2024 by sottile</p>  
+<p>Last modified: Thu Jul 11 21:16:21 CEST 2024 by sottile</p>  
  </body>
 </html> 
 
