--- a/research/stories/index.html
+++ b/research/stories/index.html
@@ -16,9 +16,11 @@
 <!---------------->
 <!---------------->
 <!--  These are all 150 points high  --->
+<!----- July 2024  ----------->
+<A HREF="LGalois/index.html"><IMG SRC="LGalois/images/TIe2ThI.4.png" height=150pt BORDER=2 ALT="Schubert Problem in LG4"></a>
 
 <!----- April 2023 ----------->
-<A HREF="WangShi/index.html"><IMG SRC="WangShi/images/WS8_150.png" height=150pt BORDER=2 ALT="Hypercube"></a>
+<A HREF="WangShi/index.html"><IMG SRC="WangShi/images/WS8_150.png" height=150pt BORDER=2 ALT="Wang-Shi Splits"></a>
 
 
 <!----- April 2022 ----------->
