--- a/research/stories/LGalois/index.html
+++ b/research/stories/LGalois/index.html
@@ -1,1 +1,182 @@
-LG4.html
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>Enriched Schubert Problems in Lagrangian Grasasmannians</title>
+</head>
+<body bgcolor="#ffffff">
+<!---------------------------------------------------------------------------------------------------->
+<table>
+  <tr valign=top>
+    <td rowspan=2><img src="images/TIe2ThI.4.png"> </td>
+    <td width=15> </td>
+    <td>
+      <h1>Enriched Schubert Problems in Lagrangian Grassmannians</h1>
+      <font size=+2>
+      <a href="https://franksottile.github.io">Frank Sottile</a><br>
+      <a href="https://franksottile.github.io"></a>C.J. Bott
+      </font>
+    </td>
+  </tr>
+  <tr><td></td>
+    <td><font size=+1>
+	The Lagrangian Grassmannian is the set of <i>n</i>-dimensional isotropic linear subspaces in 2<i>n</i>-dimension space equipped
+	with a nondegenerate alternating form (a symplectic vector space).
+	This has dimension <i>n</i>(<i>n</i>-1)/2.
+	It has Schubert subvarieties and a rich Schubert calculus of enumereative geometry.
+	Its Schubert problems turn out to have very rich Galois groups, much more interesting than the ordinary (type A) Grassmannian and
+	flag manifolds.
+      </font></td>
+  </tr>
+</table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+There are 44 essential Schubert problems on the Lagrangian Grassmannian of isotropic 4-planes in 8-space, LG(4).
+(By essential, we mean that they do not reduce to a smaller Lagrangian Grassmannian, and have more than two solutions.)
+Of these three have been determined to be enriched in that they do not have full symmetric Galois groups.
+We are useinf the Frobenius algorithm.
+Two problems, one with 384 solutions (<img src="Tableaux/2.Small.gif"><sub>&middot;</sub><img src="Tableaux/1.Small.gif"><sup>8</sup>=384)
+is still being computed while the with 768 solutions (<img src="Tableaux/1.Small.gif"><sup>10</sup>=768)  has resisted efforts to compute an
+eliminant.
+
+<p>
+The three all have different Galois groups, which are discussed in <img src="images/pdf.gif">
+<!---------------------------------------------------------------------------------------------------->
+<table border=1>
+  <tr valign=top>
+    <td  align=left>
+    <font color=#0000ff
+    size=+2><sub><img src="Tableaux/31.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><Img src="Tableaux/21.Small.gif"></sub>  = 4 in LG(4) </font> </td>
+    <td> Klein 4-group (the essential geometry is the 
+   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
+    <td>&nbsp;2,2 </td>
+    <td align=right> 75003&nbsp;</td>
+    <td align=right> 0.7500&nbsp;</td>
+    <td align=right> 3.0001&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,1,1 </td>
+    <td align=right> 24997&nbsp;</td>
+    <td align=right> 0.2500&nbsp;</td>
+    <td align=right> 0.9999&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
+  </tr>
+  <tr>
+    <td colspan=4><font size=+1> This took 1465.42 seconds </font></td>
+  </tr>
+</table>
+<!----------------------------------------------------------------------------------------------------><br>
+<table border=1>
+  <tr valign=top>
+    <td colspan=4 align=center>
+    <font color=#0000ff size=+2><img src="Tableaux/3.Small.gif">&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 4 in LG(4) </font> </td>
+   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
+    <td>&nbsp;4 </td>
+    <td align=right> 25018&nbsp;</td>
+    <td align=right> 0.2502&nbsp;</td>
+    <td align=right> 2.0014&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,2 </td>
+    <td align=right> 24877&nbsp;</td>
+    <td align=right> 0.2488&nbsp;</td>
+    <td align=right> 1.9902&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;2,2 </td>
+    <td align=right> 37733&nbsp;</td>
+    <td align=right> 0.3773&nbsp;</td>
+    <td align=right> 3.0186&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,1,1 </td>
+    <td align=right> 12372&nbsp;</td>
+    <td align=right> 0.1237&nbsp;</td>
+    <td align=right> 0.9898&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td colspan=4><font size=+1> This computed 100000 Frobenius elements </font></td>
+  </tr>
+  <tr>
+    <td colspan=4><font size=+1> This took 1979.67 seconds </font></td>
+  </tr>
+</table>
+<!----------------------------------------------------------------------------------------------------><br>
+<table border=1>
+  <tr valign=top>
+    <td colspan=4 align=center>
+    <font color=#0000ff size=+2><sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 8 in LG(4) </font> </td>
+   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
+    <td>&nbsp;4,4 </td>
+    <td align=right> 288197682&nbsp;</td>
+    <td align=right> 0.3133&nbsp;</td>
+    <td align=right> 60.1456&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,3,3 </td>
+    <td align=right> 153461629&nbsp;</td>
+    <td align=right> 0.1668&nbsp;</td>
+    <td align=right> 32.0268&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,1,1,2,2 </td>
+    <td align=right> 85571378&nbsp;</td>
+    <td align=right> 0.0930&nbsp;</td>
+    <td align=right> 17.8584&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;2,6 </td>
+    <td align=right> 153725480&nbsp;</td>
+    <td align=right> 0.1671&nbsp;</td>
+    <td align=right> 32.0818&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,2,4 </td>
+    <td align=right> 115014917&nbsp;</td>
+    <td align=right> 0.1250&nbsp;</td>
+    <td align=right> 24.0031&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;2,2,2,2 </td>
+    <td align=right> 119414267&nbsp;</td>
+    <td align=right> 0.1298&nbsp;</td>
+    <td align=right> 24.9212&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,1,1,1,1,1,1 </td>
+    <td align=right> 4614647&nbsp;</td>
+    <td align=right> 0.0050&nbsp;</td>
+    <td align=right> 0.9631&nbsp;</td>
+  </td>
+  <!-------------------------------------------------->
+  <tr>
+    <td colspan=4><font size=+1> This computed 920000000 Frobenius elements </font></td>
+  </tr>
+  <tr>
+    <td colspan=4><font size=+1> This took 252.98 Days </font></td>
+  </tr>
+</table>
+<!----------------------------------------------------------------------------------------------------><br>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<font color="#aa00aa">
+<i> Created Wed 03 Jul 2024 06:22:44 PM CEST
+ by Frank Sottile</i>
+</font>
+<body>
+</html>
