--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <tr><td><font color=brown>MATH 666</font></td>
       <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
       <td align=left><a href="teaching/24.2/Toric.txt">Outline</a>.</td>
+      <td> Tu-Th 9:35&ndash;10:50 </td>
     </tr>
     <!---------------------------------------------------------------------------------------------------->
   </table>
