--- a/research.html
+++ b/research.html
@@ -166,12 +166,10 @@ Read More:
     <TR valign=center>
     <!-----  These are all 200 points high     ------->
      <TD>
-       <A HREF="research/stories/index.html"><IMG SRC="images/stories.gif" BORDER=2
-        ALT="Mathematical Short Stories"></A> 
+       <A HREF="research/stories/index.html"><IMG SRC="images/stories.gif" BORDER=2 height=150pt ALT="Mathematical Short Stories"></A> 
      </TD>
      <TD>
-      <A HREF="research/pages/index.html"><IMG SRC="images/pages.gif" 
-         BORDER=2 ALT="Mathematical web pages"></A> 
+      <A HREF="research/pages/index.html"><IMG SRC="images/pages.gif" BORDER=2  height=150pt ALT="Mathematical web pages"></A> 
      </TD>
      <td> &nbsp; &nbsp; 
       <img src="research/ARP07/images/NSF.gif">
