--- a/talks/outreach.html
+++ b/talks/outreach.html
@@ -81,6 +81,12 @@
       14 March 2015, Texas A&amp;M University, College Station, TX.
  </li>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,     
+       Berkeley Math Circle end of semester colloquium, 16 December 2014.
+       <a href="14/ShapeOfSpace.txt">abstract</a>.
+ </li>
+ <!------------------------------------------------------------------>
 
 </ul>
 
@@ -92,12 +98,21 @@
 <font size=+1 color=brown>Activities for Middle School Students</font>
 <ul>
 
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
+    Texas A&amp;M Math Circle&mdash;beginning,
+    9 December 2023.
+    <a href="23/CrissCross.txt">abstract</a>
+    <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
    Archimedean Solids, TAMU Math Circle Intermediate, 23 November 2019.
  </li>
  <!---------------------------------------------------------------------------------------->
- <!--- ------------------------------------------------------------------------------------->
+  <!--- ------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
           <a href=""></a>Keynote Speaker, S.F. Austin High School Mini-Mathletes, Sugarland, TX
           23 March 2019.
@@ -174,7 +189,7 @@
      <A HREF="16/Shape_MathFair.txt">abstract</A>
  </li>
  <!---------------------------------------------------------------------------------------->
- <!---------------------   vvv  26  vvv   -------------------------->
+ <!---------------------   vvv  25  vvv   -------------------------->
  <!------------------------------------------------------------------>
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
        Math Circle at American Christian Academy, Ibadan, Nigeria, 5 May 2016.
@@ -209,14 +224,6 @@
  <li> <FONT COLOR="AA00FF"><I>Euler's Formula and Reglar Solids</I></font>,     
       <a href="http://domathtogether.com/imc"></a>SHSU Math Circle,
       18 March 2015, Sam Houston State University, Huntsville, TX.
- </li>
- <!------------------------------------------------------------------>
-
- 
- <!------------------------------------------------------------------>
- <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,     
-       Berkeley Math Circle end of semester colloquium, 16 December 2014.
-       <a href="14/ShapeOfSpace.txt">abstract</a>.
  </li>
  <!------------------------------------------------------------------>
 
@@ -362,6 +369,14 @@
 <font size=+1 color=brown>Activities for High School students</font>
 <ul>
 
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
+    Texas A&amp;M Math Circle&mdash;advanced,
+    11 November 2023.
+    <a href="21/Cubic.txt">abstract</a>
+    <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
  <!----------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
    <a href="https://www.math.tamu.edu/outreach/mam/">TAMU Math and Statistics Fair</a>,
@@ -766,6 +781,46 @@
 <font size=+1 color=brown>Activities for Undergraduates</font>
 <ul>
 
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club &amp; SIAM Student Organization, UT Dallas,
+    1 December 2023.   <a href="23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
+    New Mexico State University, 21 September 2023.
+   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club,
+    Texas A&amp;M University, 17 October 2023.
+   <a href="23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
+    Michigan State University, 27 April 2023.
+   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Cardano and the cubic</I></font>
+   TAMU Mathematics Club, 12 October 2021.
+   <a href="21/Cubic.txt">abstract</a>.  
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!----------------------------------------------------------------------------------------->
+ <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
+   <a href="https://www.math.tamu.edu/outreach/mam/"></a>Texas A&amp;M Mathematics Club,
+    8 February 2021. <a href="17/Five-color.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
  <!----------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
    <a href="https://www.math.tamu.edu/outreach/mam/"></a>Michigan State University Math Club,
@@ -1056,6 +1111,14 @@
 <font size=+1 color=brown>Activities for Postgraduates</font>
 <ul>
   
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Graduate Student Organization Seminar, Texas A&amp;M University.
+    September 28 2023,
+    <a href="talks/23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
  <li>
@@ -1338,6 +1401,13 @@
 <ul>
 
 
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>
+    In My Favorite Adapted Math Circle Topic, a Contributed Paper Session at the MAA Math Fest, August 2&ndash;5 2023, Tampa.
+   <a href="23/HyperbolicSoccerballs.txt">Abstract</a>. <a href="23/MathFest.pdf">text of talk</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
  <!----------------------   vvvv  6  vvvv   ------------------------->
  <!------------------------------------------------------------------>
   <li>
