--- a/talks/talks.html
+++ b/talks/talks.html
@@ -13,18 +13,18 @@ An <A HREF="selected_talks.html">abridged</A> list.
 <!---  Lots of talks.                                     --->
 <!---  71 Major invited talks  (+5, as 2 were series)     --->
 <!---   7 Refereed Conferences                            --->
-<!---  73 Other conferences                               --->
+<!---  84 Other conferences                               --->
 <!---  88 Colloquia                                       --->
 <!---  11 Short Courses   ( +37, as they were courses)    --->
 <!--- 208 Seminar talks   ( +1 some double talks)         --->
-<!--  458 + 43   total                                    --->
-<!---   2 Plenary type Outreach                           --->
-<!---  38 Middle School Outreach                          --->
-<!---  57 High School Outreach                            --->
-<!---  37 Presentations to Undergraduates                 --->
-<!---  39 Presentations to Postgraduates                  --->
-<!---   6 Outreach Professional Presentations             --->
-<!--  179 Outreach talks in total                         --->
+<!--  469 + 43   total                                    --->
+<!---   3 Plenary type Outreach                           --->
+<!---  39 Middle School Outreach                          --->
+<!---  58 High School Outreach                            --->
+<!---  43 Presentations to Undergraduates                 --->
+<!---  40 Presentations to Postgraduates                  --->
+<!---   7 Outreach Professional Presentations             --->
+<!--  190 Outreach talks in total                         --->
 <!--- 637 (+ 43) talks in all                             --->
 
 <BR>
@@ -627,6 +627,95 @@ Jump to <A HREF="#invited">invited talks</A>,
         <A HREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
+ <!--------------------------   vvvvvvvvv   Number 84  vvvvvvvvv  ------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Bloch Discriminants</I></font>
+    Minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
+    2023, University of Louisiana, Lafayette. 
+    <a href="talks/23/BlochDiscriminants.txt">abstract</a>
+    <a href="talks/23/TX_LA-23_BD.pdf">text of talk</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
+   Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
+    of Louisiana, Lafayette. 
+   <a href="talks/23/SIAM_AG.txt">abstract</a> &nbsp; <a href="talks/23/TX_LA-23_W.pdf">text of talk</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>,
+    Minisymposium on Computational Real Algebraic Geometry,
+    SIAM Conference on Applied Algebraic Geometry, Eindhoven, July 10&ndash;14 2023.
+   <a href="talks/23/SIAM_AG.txt">Abstract</a>. &nbsp; <a href="talks/23/SIAMAG.pdf">text of talk</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
+   Equivariant Schubert Calculus and Beyond,
+   <a href="https://www.summer23.cms.math.ca/">CMS Summer Meeting</a>, 2&ndash;5 June 2023.
+   <a href="talks/23/qMN.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>
+   AMS Special Session on Polynomial systems, homotopy continuation and applications.
+   January 4, 2023, Joint Mathematics Meetings, Boston, MA.
+   <a href="talks/23/CPoDPO.txt">abstract</a> &nbsp;  <a href="talks/23/JMM.pdf">text of talk</a>.
+ </li>
+  <!---------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Fermi Isospectrality</I></font>
+   Minisymposium on Mathematical Physics and Graph Theory.
+   <a href="https://www.math.uh.edu/siamtxla22/index.shtml">5th Annual Meeting of the SIAM Texas-Louisiana Section</a>,
+   4&ndash;6 November 2022, University of Houston. 
+   <a href="talks/22/FIso.txt">Abstract</a><a href="talks/22/TX-LA.pdf">text of talk</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Toric compactifications and discrete periodic operators</I></font>
+   Spectral theory of discrete and continuous models in quantum mechanics, November 5&ndash;7
+   2021, <a href="https://faculty.utrgv.edu/eleftherios.gkioulekas/2021-siam-txla-meeting-spi/index.html">SIAM TX/LA Annual Meeting</a>,
+   UTRGV, South Padre Island, Texas. 
+   <a href="talks/21/TX-LA.txt">abstract</a>.  <a href="talks/21/TX-LA.pdf">text</a> of talk.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>General witness sets</I></font>
+   Symbolic-Numerical Solving, Mathematical Congress of the Americas 16 July 2021.
+   <a href="talks/21/JMM21.pdf"></a> <a href="talks/21/witness.txt">abstract</a>
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Irrational toric varieties and the secondary polytope</I></font>
+   <a href=""></a>S31: Mathematical-Physical Aspects of Toric and Tropical Geometry,
+   Mathematical Congress of the Americas 13 July 2021.
+   <a href="talks/21/MCA_toric.txt">abstract</a>, an <a href="talks/21/MCA_toric.html">image</a> from the talk.
+ <!---------------------------------------------------------------------------------------->
+ <!----------------------------------------------------------------------------------------->
+ <li> <FONT COLOR="AA00FF"><I>Computing Galois Groups in Enumerative Geometry</I></font>,
+   <a href="https://icerm.brown.edu/programs/sp-s21/w2/">Sage/Oscar Days for Combinatorial Algebraic Geometry</a>,
+    18 February 2021. 
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>General witness sets</I></font>
+   AMS Special Session on Numerical Methods for Solving Polynomial Systems, 2021 Joint Mathematics Meetings.
+   6 January 2021.
+   <a href="talks/21/JMM21.pdf">text of talk</a>.
+  
+ </li>
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
    <FONT COLOR="AA00FF"><I>Critical points of discrete periodic operators</I></font>
