--- a/talks.html
+++ b/talks.html
@@ -282,51 +282,10 @@
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
-    Texas A&amp;M Math Circle&mdash;beginning,
-    9 December 2023.
-    <a href="talks/23/CrissCross.txt">abstract</a>
-    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Colloquium, UT Dallas.
     December 1 2023,
     <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club &amp; SIAM Student Organization, UT Dallas,
-    1 December 2023.   <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
-    Texas A&amp;M Math Circle&mdash;advanced,
-    11 November 2023.
-    <a href="talks/21/Cubic.txt">abstract</a>
-    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Bloch Discriminants</I></font>
-    Minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
-    2023, University of Louisiana, Lafayette. 
-    <a href="talks/23/BlochDiscriminants.txt">abstract</a>
-    <a href="talks/23/TX_LA-23_BD.pdf">text of talk</a>.
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
-   Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
-    of Louisiana, Lafayette. 
-   <a href="talks/23/SIAM_AG.txt">abstract</a> &nbsp; <a href="talks/23/TX_LA-23_W.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
@@ -337,21 +296,6 @@
    <a href="talks/23/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club,
-    Texas A&amp;M University, 17 October 2023.
-   <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Graduate Student Organization Seminar, Texas A&amp;M University.
-    September 28 2023,
-    <a href="talks/23/GSO.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
- <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
@@ -378,28 +322,6 @@
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
-    New Mexico State University, 21 September 2023.
-   <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>
-    In My Favorite Adapted Math Circle Topic, a Contributed Paper Session at the MAA Math Fest, August 2&ndash;5 2023, Tampa.
-   <a href="talks/23/HyperbolicSoccerballs.txt">Abstract</a>. <a href="talks/23/MathFest.pdf">text of talk</a>.
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>,
-    Minisymposium on Computational Real Algebraic Geometry,
-    SIAM Conference on Applied Algebraic Geometry, Eindhoven, July 10&ndash;14 2023.
-   <a href="talks/23/SIAM_AG.txt">Abstract</a>. &nbsp; <a href="talks/23/SIAMAG.pdf">text of talk</a>.
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
    <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
   <a href="https://sites.google.com/view/schubertsummerschool2023/">Schubert Conference Summer 2023</a>, 13&ndash;22 June
   2023.    <a href="talks/23/qMN.txt">Abstract</a>. 
@@ -410,21 +332,6 @@
    <FONT COLOR="AA00FF"><I>Tutorials: The Geometry of Grassmannians</I></font>,
   <a href="https://sites.google.com/view/schubertsummerschool2023/">Schubert Conference Summer 2023</a>, 13&ndash;22 June
   2023.    <a href="talks/23/SchubertTutorials.txt">abstract</a>
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-   <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
-   Equivariant Schubert Calculus and Beyond,
-   <a href="https://www.summer23.cms.math.ca/">CMS Summer Meeting</a>, 2&ndash;5 June 2023.
-   <a href="talks/23/qMN.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Lecture to undergraduates,
-    Michigan State University, 27 April 2023.
-   <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
@@ -464,13 +371,6 @@
    <a href="talks/23/GGEGA.txt">Abstract</a>. &nbsp; <a href="talks/23/SFSU.pdf">text of talk</a>.
   </li>
  <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-   <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>
-   AMS Special Session on Polynomial systems, homotopy continuation and applications.
-   January 4, 2023, Joint Mathematics Meetings, Boston, MA.
-   <a href="talks/23/CPoDPO.txt">abstract</a> &nbsp;  <a href="talks/23/JMM.pdf">text of talk</a>.
- </li>
   <!---------------------------------------------------------------------------------------->
   <li>
    <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule for quantum cohomology of the flag manifold</I></font>
@@ -478,14 +378,6 @@
    <a href="talks/22/qMN.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-   <FONT COLOR="AA00FF"><I>Fermi Isospectrality</I></font>
-   Minisymposium on Mathematical Physics and Graph Theory.
-   <a href="https://www.math.uh.edu/siamtxla22/index.shtml">5th Annual Meeting of the SIAM Texas-Louisiana Section</a>,
-   4&ndash;6 November 2022, University of Houston. 
-   <a href="talks/22/FIso.txt">Abstract</a><a href="talks/22/TX-LA.pdf">text of talk</a>.
- </li>
  <!---------------------------------------------------------------------------------------->
   <li>
    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>
@@ -532,47 +424,17 @@
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
-   <FONT COLOR="AA00FF"><I>Toric compactifications and discrete periodic operators</I></font>
-   Spectral theory of discrete and continuous models in quantum mechanics, November 5&ndash;7
-   2021, <a href="https://faculty.utrgv.edu/eleftherios.gkioulekas/2021-siam-txla-meeting-spi/index.html">SIAM TX/LA Annual Meeting</a>,
-   UTRGV, South Padre Island, Texas. 
-   <a href="talks/21/TX-LA.txt">abstract</a>.  <a href="talks/21/TX-LA.pdf">text</a> of talk.
- </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
- <li>
    <FONT COLOR="AA00FF"><I>Quasi-symmetric functions and Hopf Algebras</I></font> &nbsp;  A course of 4 lectures at:
    <a href="http://cimpa-bobo2021.u-naziboni.bf/">CIMPA-Bobo<a> CIMPA Research School "Combinatoire des mots, combinatoire
    alg&eacute;brique, et exploration informatique avec Sage", 18&ndash;29 October 2021, Universit&eacute; Nazi Boni,
    Burkina Faso.
  </li>
  <!---------------------------------------------------------------------------------------->
- <li>
-   <FONT COLOR="AA00FF"><I>Cardano and the cubic</I></font>
-   TAMU Mathematics Club, 12 October 2021.
-   <a href="talks/21/Cubic.txt">abstract</a>.  
- </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
   <li>
    <FONT COLOR="AA00FF"><I>Applications of Bernstein's Other Theorem</I></font>
    <a href="http://wiki.siam.org/siag-ag/index.php/Webinar">SIAM SAGA Seminar</a>, 10 August 2021.
    <a href="talks/21/BOT.txt">abstract</a>.   <a href="talks/21/SAGA.html">pictures from the talk</a>.
  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
- <li>
-   <FONT COLOR="AA00FF"><I>General witness sets</I></font>
-   Symbolic-Numerical Solving, Mathematical Congress of the Americas 16 July 2021.
-   <a href="talks/21/JMM21.pdf"></a> <a href="talks/21/witness.txt">abstract</a>
- </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
- <li>
-   <FONT COLOR="AA00FF"><I>Irrational toric varieties and the secondary polytope</I></font>
-   <a href=""></a>S31: Mathematical-Physical Aspects of Toric and Tropical Geometry,
-   Mathematical Congress of the Americas 13 July 2021.
-   <a href="talks/21/MCA_toric.txt">abstract</a>, an <a href="talks/21/MCA_toric.html">image</a> from the talk.
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
@@ -627,28 +489,8 @@
    <a href="talks/21/EDD.txt">abstract</a>.
  </li>
  <!---------------------------------------------------------------------------------------->
- <!----------------------------------------------------------------------------------------->
- <li> <FONT COLOR="AA00FF"><I>Computing Galois Groups in Enumerative Geometry</I></font>,
-   <a href="https://icerm.brown.edu/programs/sp-s21/w2/">Sage/Oscar Days for Combinatorial Algebraic Geometry</a>,
-    18 February 2021. 
- </li>
  <!---------------------------------------------------------------------------------------->
- <!----------------------------------------------------------------------------------------->
- <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
-   <a href="https://www.math.tamu.edu/outreach/mam/"></a>Texas A&amp;M Mathematics Club,
-    8 February 2021. <a href="talks/17/Five-color.txt">abstract</a>.
- </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
- <li>
-   <FONT COLOR="AA00FF"><I>General witness sets</I></font>
-   AMS Special Session on Numerical Methods for Solving Polynomial Systems, 2021 Joint Mathematics Meetings.
-   6 January 2021.
-   <a href="talks/21/JMM21.pdf">text of talk</a>.
-  
- </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
+ <!----------------------  2021--2023 have not been recorded/counted ----------------------------->
  <!--------------------- vvvvvv   All in 2020 were recorded   ----------------------------->
  <!---------------------------------------------------------------------------------------->
 
@@ -666,7 +508,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Jun 20 12:36:00 CDT 2024 by sottile</p>  
+<p>Last modified: Thu Aug 08 17:12:20 CDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
