getting ready for Semester

--- a/index.html
+++ b/index.html
@@ -101,18 +101,9 @@
   <TR valign=top>
     <td colspan=2><b>News:</b>
 
-      In Fall 2024, I will be the Director of Honors and Undergraduate Research for the Department of Mathematics.<br>
+      I am now the Director of Honors and Undergraduate Research for the Department of Mathematics.<br>
       
-      Samuel Sottile, my son and current (2023&ndash;4, in Mathematics)
-      <a href="https://drive.google.com/file/d/1BPIvKT-nIQTXcYLDqkCyt-VEanbyGXE6/view">Churchill Scholar</a>,
-      was awarded a National Science Foundation Graduate Fellowship that he will use at Stanford next year.
-      He also achieved distinction on the Part III of the Mathematical Tripos.<br>
-   
-      (We both graduated from Michigan State University, held Churchill Scholarships, received Distinction on Part III, and held
-      NSFGR Fellowships; he pips me on being a Goldwater Scholar.)
-      <br> 
-
-      </td>
+     </td>
   </TR>
   <TR valign=top>
    <td colspan=2> <hr></td>
@@ -131,7 +122,7 @@
       College Station, TX 77843-3368 &nbsp;
    </TD>
    <TD width=250>
-     Office: Blocker 601K
+     Office: Blocker 601L
     <BR>
      Math Office: 979.845.7554<br>
      Email:  <TT>sottile@tamu.edu</TT><BR><br>
@@ -154,17 +145,35 @@
   <hr>
   <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
-   <table>
+   <table border=0>
    <!---------------------------------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 666</font></td>
+    <tr valign=top><td><font color=brown>MATH 666</font></td>
       <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
-      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a>.</td>
-      <td> Tu-Th 9:35&ndash;10:50 </td>
+      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
+      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 110
+      </td>
     </tr>
+    <!-------------------------------------------------->
+    <tr valign=top><td colspan=3 rowspan=2><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
+     <td> Mondays </td><td>14:00-15:00 </td>
+    </tr>
+    <!-------------------------------------------------->
+     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
+    <!-------------------------------------------------->
+   <tr valign=top>
+     <td colspan=1 rowspan=4><font color=blue><b>Advising:</b></font></td>
+     <td colspan=2 rowspan=4>Blocker 601L</td>
+     <td> Mondays </td><td>13:00-14:00 </td>
+    </tr>
+    <!-------------------------------------------------->
+     <tr><td> Tuesday </td><td>17:00-18:00  </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td> Thursday </td><td>17:00-18:00 </td> </tr>
     <!---------------------------------------------------------------------------------------------------->
   </table>
  <!---------------------------------------------------------------------------------------------------->
- <!----------  News and anouncements  --------------------------------------------->
    <hr>
  <!------------------------------------------------------------------------------->
   <table>
