--- a/teaching.html
+++ b/teaching.html
@@ -112,7 +112,7 @@
   <td width=10></td>
   <td colspan=3>
     <BR>
-    <B>Weekly <A HREF="images/week.png">schedule</A></B> <BR><BR>
+    <B>Weekly <A HREF="images/week.png">schedule</A></B> &nbsp; &nbsp; <a href="advising/Sottile61.jpg">Some of my advisees</a><BR><BR>
     <a href="advising/Fulton80.jpg">Bill Fulton and some of his students</a>.
   </td>
  </tr>
@@ -134,45 +134,37 @@
 <!--    re-read your evaluations !                                          ---->
 <!------------------------------------------------------------------------------>
  <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Spring  2024</font></b>
-   <table>
-     <!-------------------------------------------------------------------------->
-    <tr><td><font color=brown>MATH 629</font></td>
-      <td><a href="teaching/24.1/629.html">History of Mathematics</a> &nbsp; </td>
-      <td align=leftt>This is a distance course.</td>
-     </tr>
+  <!---------------------------------------------------------------------------------------------------->
+   <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
+   <table border=0>
+   <!---------------------------------------------------------------------------------------------------->
+    <tr valign=top><td><font color=brown>MATH 666</font></td>
+      <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
+      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
+      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 110
+      </td>
+    </tr>
+    <!-------------------------------------------------->
+    <tr valign=top><td colspan=3 rowspan=2><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
+     <td> Mondays </td><td>14:00-15:00 </td>
+    </tr>
+    <!-------------------------------------------------->
+     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
+    <!-------------------------------------------------->
+   <tr valign=top>
+     <td colspan=1 rowspan=4><font color=blue><b>Advising:</b></font></td>
+     <td colspan=2 rowspan=4>Blocker 601L</td>
+     <td> Mondays </td><td>13:00-14:00 </td>
+    </tr>
+    <!-------------------------------------------------->
+     <tr><td> Tuesday </td><td>17:00-18:00  </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td> Thursday </td><td>17:00-18:00 </td> </tr>
+    <!---------------------------------------------------------------------------------------------------->
   </table>
- <!------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------->
-<!--<TABLE>
- <TR> 
-  <TD>
-   &nbsp;<FONT COLOR=AA00FF><EM>Office Hours</EM>:&nbsp; </FONT>
-  </TD>
-<TD>
-   <IMG SRC="images/dot.gif"> Mondays:
-  </TD>  
-  <TD>
-  14:00&ndash;14:50
-  </TD>
- </TR>
-  <TR><TD></TD>
-  <TD>  
-   <IMG SRC="images/dot.gif"> Wednesdays:
-  </TD>  
-  <TD>
-   13:00&ndash;14:00
-  </TD>
- </TR>
-  <TD></TD> 
-  <TD colspan=2>
-   <IMG SRC="images/dot.gif"> By appointment
-  </TD>
- </TR> 
-</TABLE>-->
-<!-------------------------------------------------->
-</td></tr>
-<!---------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
 
 
 <tr><td colspan=3>
@@ -203,10 +195,6 @@
   Jennifer Pickrel,  TAMU Master's Student.
  </dd>------>
  <br>
-  <!------------------------------------------------------------------>
- <dd>
-   <A HREF="https://mattfaust.github.io">Matthew Faust</a>, TAMU Ph.D. Student.
- </dd>
  <!------------------------------------------------------------------>
   <dd>
     <A HREF=""></a>Christopher Bott, TAMU Ph.D. Student.
