--- a/CV.html
+++ b/CV.html
@@ -446,10 +446,10 @@ Cambridge University.
  <li>
    <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, Beginning January 2018. Ph.D. May 2023.
  </li>
-   <br>
  <li>
- <A HREF="https://mattfaust.github.io">Matthew Faust</a>, September 2019 &ndash; 
+ <A HREF="https://mattfaust.github.io">Matthew Faust</a>, Beginning September 2019  Ph.D. May 2024.
  </li>
+   <br>
  <li>
    <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, November 2020 &ndash; 
  </li>
