--- a/advising/advising.html
+++ b/advising/advising.html
@@ -69,11 +69,6 @@ You needn't take my word on this, feel free to contact those who have worked wit
 <font color=maroon>Current Students</font>
  <ul>
  <!------------------------------------------------------------------>
-  <li>
-    <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Graduate Student.
-  </li>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
  <li>
    <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, TAMU Ph.D.  Student.
  </li>
@@ -93,36 +88,46 @@ You needn't take my word on this, feel free to contact those who have worked wit
 <font color=maroon>Former Students</font>
 <ul>
  <!------------------------------------------------------------------>
+  <li>
+    <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Ph.D. 2024.
+    Visiting Assistant Professor, Michigan State University.
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
  <li>
-  <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. 2023.
+   <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. 2023.
+   Van Vleck Assistant Professor, University of Wisconsin.
  </li>
  <!------------------------------------------------------------------>
  <li>
-  <A HREF="https://sites.google.com/view/elise-walker/">Elise Walker</a>, TAMU Ph.D. 2022.
+   <A HREF="https://sites.google.com/view/elise-walker/">Elise Walker</a>, TAMU Ph.D. 2022.
+   Sandia National Laboratories.
  </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
  <li>
    <A HREF="https://sites.google.com/view/taylorbrysiewicz/">Taylor Brysiewicz</a>, TAMU Ph.D.  2020.
+   Assistant Professor, Western University, 
  </li>
  <!------------------------------------------------------------------>
  <li>
-   <A HREF="https://acms.nd.edu/people/guestfaculty/"></a>Li Ying, TAMU Ph.D. 2019.
+   <A HREF="https://as.vanderbilt.edu/math/bio/?who=li-ying"></a>Li Ying, TAMU Ph.D. 2019.
+   Senior Lecturer, Vanderbilt University.
  </li>
  <!------------------------------------------------------------------>
  <li>
-   <A HREF="/~atafirat/"></a>Ata Firat Pir, alphaStar. Ph.D. 2018.
+   <A HREF="/~atafirat/"></a>Ata Firat Pir, Ph.D. 2018.
  </li>
  <!------------------------------------------------------------------>
  <li>
-  <A HREF="https://www.rose-hulman.edu/academics/faculty/williams-robert-william7.html">Robert Williams</a>, Ph.D. 2017.
-   Visiting Assistant Professor, 
-   <a href="http://www.rose-hulman.edu/math.aspx">Rose Hulman Institute</a> in 2017&ndash;19.
+  <A HREF="https://www.rose-hulman.edu/academics/faculty/williams-robert-william7.html"></a>Robert Williams, Ph.D. 2017.
+<!--   Visiting Assistant Professor, 
+   <a href="http://www.rose-hulman.edu/math.aspx">Rose Hulman Institute</a> in 2017&ndash;19.-->
  </li>
  <!------------------------------------------------------------------>
  <li> <A href="http://www.benedictine.edu/faculty-staff/hein-nickolas">Nickolas
         Hein</A>,  Ph.D. 2013.  
-      Assistant Professor, Benedictine College, Atchison, Kansas.
+      Associate Professor, Benedictine College, Atchison, Kansas.
  </li>
  <!------------------------------------------------------------------>
  <li>
@@ -131,7 +136,7 @@ You needn't take my word on this, feel free to contact those who have worked wit
  <!------------------------------------------------------------------>
  <LI> <A HREF="http://personal.cimat.mx:8181/~abraham.mc/Home.html">Abraham
      Mart&iacute;n del Campo-Sanchez</A>,  Ph.D. 2012.
-     Assistant Professor, CIMAT, Guanajuato Mexico.
+     Professional Comedian,
  <!------------------------------------------------------------------>
  <LI> <A HREF="/~nisiabu/"></a> 
    <a href="mailto:nisiabu@gmail.com">Weronika Buczy&nacute;ska</A>,
